cabal-version: 3.0
name: wireform-derive
version: 0.2.0.0
synopsis: Annotation-driven Template Haskell deriver core for wireform
description:
  Shared `Modifier` annotation vocabulary and TH-reflection machinery used
  by per-format wireform deriver packages (`wireform-proto`,
  `wireform-cbor`, `wireform-msgpack`, `wireform-thrift`, ...).
  .
  Inspired by riz0id's `serde-th` / `aeson-th`.

license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    DeriveDataTypeable
    DeriveLift
    OverloadedStrings
    LambdaCase
    ScopedTypeVariables
    TupleSections
    MultiWayIf
    RecordWildCards
    NamedFieldPuns

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Wireform.Derive
    Wireform.Derive.Backend
    Wireform.Derive.NameStyle
    Wireform.Derive.Modifier
    Wireform.Derive.TypeInfo
    Wireform.Derive.ModifierInfo
    Wireform.Derive.Extension
    Wireform.Derive.Aeson
  build-depends:
    base >= 4.16 && < 5,
    bytestring >= 0.11 && < 0.13,
    containers >= 0.6 && < 0.8,
    text >= 2.0 && < 2.2,
    template-haskell >= 2.18 && < 2.24,
    th-abstraction >= 0.5 && < 0.8,
    mtl >= 2.2 && < 2.4,
    transformers >= 0.5 && < 0.7,
    deepseq >= 1.4 && < 1.6,
    hashable >= 1.3 && < 1.6,
    aeson >= 2.1 && < 2.3

test-suite wireform-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Test.Derive.NameStyle
    Test.Derive.Modifier
    Test.Derive.Extension
    Test.Derive.Fixtures
    Test.Derive.Fixtures.Types
    Test.Derive.Fixtures.Reified
    Test.Derive.Aeson
    Test.Derive.Aeson.Types
    Test.Derive.Aeson.Instances
  build-depends:
    base,
    wireform-derive,
    bytestring,
    containers,
    text,
    aeson,
    template-haskell,
    hedgehog >= 1.0 && < 1.5,
    tasty >= 1.4 && < 1.6,
    tasty-hedgehog >= 1.0 && < 1.5,
    tasty-hunit >= 0.10 && < 0.11
