cabal-version: 3.0
name: wireform-fury
version: 0.1.0.0
synopsis: Apache Fory (formerly Fury) xlang serialization
description:
  An implementation of the
  <https://fory.apache.org/docs/specification/xlang_serialization_spec
  Apache Fory xlang> binary serialization format.
  .
  The current scope is the spec\'s primitive value layer (varuint32,
  varuint64, zigzag varint32\/64, tagged int64, varuint36_small,
  IEEE float\/double, UTF-8 string headers) plus a self-describing
  collection framing that round-trips inside this package. Reference
  tracking, meta-string deduplication, and the streaming TypeDef
  cache are intentionally not enabled in this initial release; see
  the @Fury.Encode@ haddock for the exact subset.
license: BSD-3-Clause
build-type: Simple

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -O2
  default-language: GHC2021
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  exposed-modules:
    Fury.Class
    Fury.Decode
    Fury.Derive
    Fury.Encode
    Fury.Encoding
    Fury.MetaString
    Fury.TypeId
    Fury.Value
  build-depends:
    base >= 4.16 && < 5,
    wireform-core,
    wireform-derive,
    template-haskell >= 2.18 && < 2.24,
    bytestring >= 0.11 && < 0.13,
    containers >= 0.6 && < 0.8,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    deepseq >= 1.4 && < 1.6,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3

test-suite wireform-fury-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.Fury.Encoding
    Test.Fury.Value
    Test.Fury.Derive
    Test.Fury.Derive.Types
    Test.Fury.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-fury,
    wireform-derive,
    bytestring,
    text,
    vector,
    tasty,
    tasty-hunit,
    tasty-hedgehog,
    hedgehog
