cabal-version:      3.0
name:               wireform-grpc
version:            1.1.1
synopsis:           Native Haskell implementation of the gRPC framework
description:        This is a fully compliant and feature complete native Haskell
                    implementation of gRPC, Google's RPC framework.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-dir:           data
extra-source-files: data/route_guide_db.json
                    data/grpc-demo.pem
                    data/grpc-demo.key
                    data/interop.pem
                    data/interop.key
                    data/interop-ca.pem
tested-with:        GHC==8.10.7
                  , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

source-repository head
  type:     git
  location: https://github.com/well-typed/grapesy

common lang
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -Wprepositive-qualified-module
      -Widentities
      -Wmissing-export-lists
  build-depends:
      base >= 4.14 && < 4.22
  default-language:
      Haskell2010
  default-extensions:
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveAnyClass
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NumericUnderscores
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances

  if impl(ghc >= 9.0)
    ghc-options:
      -Wunused-packages

common common-executable-flags
  ghc-options:
      -threaded
      -rtsopts

library
  import:          lang
  hs-source-dirs:  src

  exposed-modules:
      Network.GRPC.Client
      Network.GRPC.Client.Binary
      Network.GRPC.Client.StreamType.CanCallRPC
      Network.GRPC.Client.StreamType.Conduit
      Network.GRPC.Client.StreamType.IO
      Network.GRPC.Client.StreamType.IO.Binary
      Network.GRPC.Common
      Network.GRPC.Common.Binary
      Network.GRPC.Common.Compression
      Network.GRPC.Common.Headers
      Network.GRPC.Common.HTTP2Settings
      Network.GRPC.Common.JSON
      Network.GRPC.Common.NextElem
      Network.GRPC.Common.Protobuf
      Network.GRPC.Common.Protobuf.Any
      Network.GRPC.Common.StreamElem
      Network.GRPC.Common.StreamType
      Network.GRPC.Server
      Network.GRPC.Server.Binary
      Network.GRPC.Server.Otel
      Network.GRPC.Server.Protobuf
      Network.GRPC.Server.Run
      Network.GRPC.Server.StreamType
      Network.GRPC.Server.StreamType.Binary
      Network.GRPC.Client.Otel
  other-modules:
      Network.GRPC.Util.Imports
      Network.GRPC.Util.Stream
      Network.GRPC.Common.ProtocolException
      Network.GRPC.Client.Call
      Network.GRPC.Client.Connection
      Network.GRPC.Client.Run
      Network.GRPC.Client.Meta
      Network.GRPC.Client.Session
      Network.GRPC.Client.StreamType
      Network.GRPC.Server.Call
      Network.GRPC.Server.Context
      Network.GRPC.Server.Handler
      Network.GRPC.Server.HandlerMap
      Network.GRPC.Server.RequestHandler
      Network.GRPC.Server.RequestHandler.API
      Network.GRPC.Server.Session
      Network.GRPC.Util.AccumulatedByteString
      Network.GRPC.Util.GHC
      Network.GRPC.Util.HTTP2
      Network.GRPC.Util.ClientStream
      Network.GRPC.Util.ServerStream
      Network.GRPC.Util.RedundantConstraint
      Network.GRPC.Util.Session.API
      Network.GRPC.Util.Session.Channel
      Network.GRPC.Util.Session.Client
      Network.GRPC.Util.Session.Server
      Network.GRPC.Util.Thread
      Network.GRPC.Util.TimeManager
      Network.GRPC.Util.TLS
      Network.GRPC.Util.HeaderTable
      Network.GRPC.Util.Version
      Network.GRPC.Util.Backtrace

  build-depends:
    , aeson                     >= 1.5     && < 2.3
    , async                     >= 2.2     && < 2.3
    , binary                    >= 0.8     && < 0.9
    , bytestring                >= 0.10.12 && < 0.13
    , conduit                   >= 1.3     && < 1.4
    , containers                >= 0.6     && < 0.8
    , crypton-x509              >= 1.7     && < 1.8
    , crypton-x509-store        >= 1.6     && < 1.7
    , crypton-x509-system       >= 1.6     && < 1.7
    , data-default              >= 0.7     && < 0.9
    , deepseq                   >= 1.4     && < 1.6
    , exceptions                >= 0.10    && < 0.11
    , grpc-spec                 >= 1.0     && < 1.1
    , wireform
    , wireform-proto
    , http-semantics            >= 0.3.0   && < 0.3.1
    , http-types                >= 0.12    && < 0.13
    , http2-tls                 >= 0.4.9   && < 0.5
    , mtl                       >= 2.2     && < 2.4
    , network                   >= 3.2.4   && < 3.3
    , network-run               >= 0.4.3   && < 0.5
    , random                    >= 1.2     && < 1.4
    , recv                      >= 0.1     && < 0.2
    , stm                       >= 2.5     && < 2.6
    , text                      >= 1.2     && < 2.2
    , time-manager              >= 0.2.2   && < 0.3
    , tls                       >= 1.7     && < 2.2
    , unbounded-delays          >= 0.1.1   && < 0.2
    , unordered-containers      >= 0.2     && < 0.3
    , utf8-string               >= 1.0     && < 1.1
    , vector                    >= 0.13    && < 0.14

      -- We pin very specific versions of http2.
    , http2 == 5.3.9

-- Test suites and benchmarks are disabled while migrating from proto-lens to wireform.
-- They depend on proto-lens generated code that needs to be regenerated.

test-suite wireform-grpc-test-minimal
  import:          lang, common-executable-flags
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test-minimal
  main-is:         Main.hs
  build-depends:
    , wireform-grpc
    , wireform-proto
    , bytestring >= 0.10.12 && < 0.13
    , wireform-core == 0.1.*

Flag build-stress-test
  description: Build the stress test
  default: False
  manual: True

Flag strace
  description: Write events to /dev/null in @grapesy-kvstore@ so that they show up in strace
  default: False
  manual: True
