cabal-version: 3.0
name: wireform-html
version: 0.1.0.0
synopsis:
  High-performance HTML5 tokenizer, tree builder, DOM, CSS selectors, and streaming rewriter
license: BSD-3-Clause
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options:
    -O1
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  ghc-options:
  hs-source-dirs: src
  other-modules:
    HTML.DOM.Index
    HTML.DOM.Zipper
    HTML.DOM.Selector
    HTML.Rewriter.StackFrame
    HTML.Rewriter.Mutations
    HTML.Rewriter.Config
  exposed-modules:
    HTML.Value
    HTML.Parse
    HTML.Encode
    HTML.Class
    HTML.Derive
    HTML.TagId
    HTML.DOM
    HTML.Selector
    HTML.Rewriter
  c-sources: cbits/html_scan.c
  include-dirs: cbits/simde
  cc-options: -O3 -march=native
  build-depends:
    base >= 4.16 && < 5,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    text >= 2.0 && < 2.2,
    vector >= 0.13 && < 0.14,
    primitive >= 0.7 && < 0.10,
    containers >= 0.6 && < 0.8,
    megaparsec >= 9.0 && < 10,
    deepseq >= 1.4 && < 1.6,
    template-haskell >= 2.18 && < 2.24,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3

test-suite wireform-html-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.HTML.Derive
    Test.HTML.Derive.Types
    Test.HTML.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-html,
    wireform-derive,
    text,
    primitive,
    tasty,
    tasty-hunit

test-suite html5lib-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: ../test-interop
  main-is: HTML5LibTest.hs
  build-depends:
    base,
    wireform-html,
    bytestring,
    text,
    vector,
    directory,
    filepath,
    tasty,
    tasty-hunit

test-suite html-dom-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: ../test-interop
  main-is: HTMLDOMTest.hs
  build-depends:
    base,
    wireform-html,
    bytestring,
    text,
    tasty,
    tasty-hunit

test-suite html-rewriter-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: ../test-interop
  main-is: HTMLRewriterTest.hs
  build-depends:
    base,
    wireform-html,
    bytestring,
    text,
    aeson,
    tasty,
    tasty-hunit,
    directory,
    filepath
