cabal-version: 3.0
name: wireform-html
version: 0.1.0.0
synopsis:
  High-performance HTML5 tokenizer, tree builder, DOM, CSS selectors, and streaming rewriter
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
copyright: 2026 Ian Duncan
build-type: Simple

common defaults
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  default-extensions:
    StrictData
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    OverloadedStrings
    LambdaCase

library
  import: defaults
  ghc-options:
  hs-source-dirs: src
  other-modules:
    HTML.DOM.Index
    HTML.DOM.Zipper
    HTML.DOM.Selector
    HTML.Rewriter.StackFrame
    HTML.Rewriter.Mutations
    HTML.Rewriter.Config
  exposed-modules:
    HTML.Value
    HTML.Parse
    HTML.Encode
    HTML.Class
    HTML.Encoding
    HTML.Derive
    HTML.TagId
    HTML.DOM
    HTML.Selector
    HTML.Rewriter
  c-sources: cbits/html_scan.c
  include-dirs: cbits/simde
  cc-options: -O3 -march=native
  build-depends:
    base >= 4.16 && < 5,
    wireform-derive,
    bytestring >= 0.11 && < 0.13,
    wireform-core == 0.1.*,
    -- HTML.Selector unpacks Text via the `ByteArray` constructor
    -- (Data.Text.Array.Array became a re-export of ByteArray in
    -- text 2.1); 2.0.x still wraps a separate Array newtype and
    -- breaks the pattern match. Bump the lower bound accordingly.
    text >= 2.1 && < 2.2,
    vector >= 0.13 && < 0.14,
    primitive >= 0.7 && < 0.10,
    containers >= 0.6 && < 0.9,
    megaparsec >= 9.0 && < 10,
    deepseq >= 1.4 && < 1.6,
    template-haskell >= 2.18 && < 2.25,
    hashable >= 1.3 && < 1.6,
    unordered-containers >= 0.2.16 && < 0.3

test-suite wireform-html-derive-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Test.HTML.Derive
    Test.HTML.Derive.Types
    Test.HTML.Derive.Instances
  default-extensions:
    ScopedTypeVariables
    TemplateHaskell
  build-depends:
    base,
    wireform-html,
    wireform-derive,
    text,
    primitive,
    sydtest

-- The html5lib-test / html-dom-test / html-rewriter-test test suites
-- live in the umbrella wireform.cabal at the workspace root. They drive
-- shared corpora out of `test-interop/` and need to be invoked from
-- there, so duplicating them here with `hs-source-dirs: ../test-interop`
-- would break `cabal sdist` for wireform-html (relative paths outside
-- the package source tree are not portable).
